--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -56,7 +56,9 @@
         <aside class="nleft col-md-6"></aside>
         <aside class="nrigth col-md-6">
         <h4>Desayuno</h4>
-        <p>En los tiempos que corren, es común levantarse con el tiempo justo antes de salir de casa para cumplir con actividades y obligaciones diarias. Por ello, cada vez hay menos familias se toman quince o veinte minutos para desayunar correctamente.</p>
+        <p>En los tiempos que corren, es común levantarse con el tiempo justo antes de salir de casa para cumplir con actividades y obligaciones diarias. Por ello, cada vez hay menos familias se toman quince o veinte minutos para desayunar correctamente.
+        El desayuno es la comida más importante del día porque de él obtienes la energía que definirá la forma en que te enfrentarás a tu día toda la vida. Elige siempre comerlo con nosotros y garantizarás energía saludable sin igual.
+        </p>
         </aside>
     </div>
 
