--- a/pages/Servicios.html
+++ b/pages/Servicios.html
@@ -38,13 +38,13 @@
                             <a class="nav-link active" aria-current="page" href="../pages/Menu.html">Menu</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../pages/Servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../pages/Reserva.html">Reserva</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="../pages/ubicación.html">ubicacion</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="">Contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./pages/ubicación.html">ubicación</a>
                         </li>
                     </ul>
                 </div>
@@ -70,17 +70,17 @@
             <div class="card">
                 <img src="../images/patrick-tomasso-GXXYkSwndP4-unsplash.jpg" alt="reuniones" />
                 <h3>Reuniones</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima, laboriosam natus? Deleniti qui pariatur et expedita alias, doloribus dicta quam, laborum quod magni non, nam impedit repellat ad earum dolorem.</p>
+                <p>Podes cubrir la jornada con fotos y videos, personal capacitado estará capturando cada momento. Graba tu presentación para que la puedas volver a utilizar o hacemos un video resumen para que puedas compartir con tu Comunidad.</p>
             </div>
             <div class="card">
-                <img src="../images/christina-rumpf-LMzwJDu6hTE-unsplash.jpg" alt="salon" />
+                <img src="../images/robert-mathews-xXaLfz6V9rQ-unsplash.jpg" alt="salon" />
                 <h3>Salon</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima, laboriosam natus? Deleniti qui pariatur et expedita alias, doloribus dicta quam, laborum quod magni non, nam impedit repellat ad earum dolorem.</p>
+                <p>Salon equipados con 300 Mbps de internet WIFI, modernos equipos AV y el mejor servicio de gastronomía. Los salones pueden alquilarse por jornada completa o media jornada (equivale a 5 horas).</p>
             </div>
             <div class="card">
-                <img src="../imagecompressor/frente cafeteria-min.jpg" alt="catering" />
+                <img src="../images/yukiko-kanada-Ou4CQo6jzvU-unsplash.jpg" alt="catering" />
                 <h3>Catering</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima, laboriosam natus? Deleniti qui pariatur et expedita alias, doloribus dicta quam, laborum quod magni non, nam impedit repellat ad earum dolorem.</p>
+                <p>Nuestro servicio se adapta a tus necesidades y presupuesto con opcionesque se ajustan a tu estilo y preferencias: tanto catering para eventos, para reuniones familiares o eventos corporativos.</p>
             </div>
         </div>
     </main>
