--- a/pages/Reserva.html
+++ b/pages/Reserva.html
@@ -38,11 +38,11 @@
 
   <div class="jumbotron">
     <h1>Nuestra empresa</h1>
-</div>
+  </div>
 
 
 
-  <form action="">
+  <form action="formulario">
 
     <fieldset>
       <legend>Reservas</legend>
