--- a/pages/Reserva.html
+++ b/pages/Reserva.html
@@ -20,21 +20,37 @@
 
   <header>
 
-    <div class="logo">
-      <img src="../images/logo cafe.png" alt="logo">
-    </div>
-    <nav>
-      <ul class="menu">
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="../pages/Menu.html">Menu</a></li>
-        <li><a href="../pages/Servicios.html">Servicios</a></li>
-        <li><a href="../pages/Reserva.html">Reserva</a></li>
-        <li><a href="../pages/ubicación.html">Ubicacion</a></li>
-      </ul>
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../images/logo cafe.png" alt="logo cafeteria" class="logo"/>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../pages/Menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../pages/Servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../pages/Reserva.html">Reservas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../pages/ubicación.html">Ubicacion</a>
+                    </li>
+                    
+                </ul>
+            </div>
+        </div>
     </nav>
-
-  </header>
+</header>
 
   <div class="jumbotron">
     <h1>Nuestra empresa</h1>
@@ -92,26 +108,21 @@
   </form>
 
 
-  <a href="../index.html">Volver a la pagina principal</a>
-
-
-
-
   <footer>
 
-    <div>
-      <P>Nuestras redes</P>
+    <div class="parrafofooter">
+        <P class="parra">Nuestras redes</P>
     </div>
 
     <div class="redes_sociales">
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-whatsapp"></i>
-      <i class="fa-brands fa-facebook"></i>
-      <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-whatsapp"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
 
     </div>
 
-  </footer>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
